--- a/boxfile.yml
+++ b/boxfile.yml
@@ -1,7 +1,7 @@
 run.config:  
   # elixir runtime
   engine: elixir
-  image: nanobox/build:beta
+  image: nanobox/build
 
   # we need nodejs in development
   # ensure inotify exists for hot-code reloading
@@ -35,6 +35,10 @@ deploy.config:
 # add postgres as a data component
 data.db:  
   image: nanobox/postgresql:9.4
+
+data.chrome:
+  image: selenium/standalone-chrome
+  local_only: true
 
 web.main:  
   start: node-start mix phx.server
