--- a/assets/package.json
+++ b/assets/package.json
@@ -6,11 +6,17 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "humps": "^2.0.0",
+    "lodash": "^4.17.4",
+    "normalizr": "^3.2.3",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
@@ -21,6 +27,10 @@
     "babel-preset-react": "^6.24.1",
     "brunch": "2.10.7",
     "clean-css-brunch": "2.10.0",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
+    "redux-logger": "^3.0.6",
     "uglify-js-brunch": "2.1.1"
   }
 }
